--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="container">
           <nav>
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
             <img src="./img/IMAGE (3).png" alt="">
             </a>
     
@@ -36,22 +36,22 @@
                 <a class="clone" href="#">Find a property </a>
               </div>
               <div class="nav-btn">
-                <button id="light-dark">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
-                     viewBox="0 0 24 24">
-                     <path d="M12 11.807A9.002 9.002 0 0 1 
-                         10.049 2a9.942 9.942 0 0 0-5.12 2.735c-3.905 3.905-3.905 
-                         10.237 0 14.142 3.906 3.906 10.237 3.905 14.143 0a9.946 
-                         9.946 0 0 0 2.735-5.119A9.003 9.003 0 0 1 12 11.807z">
-                     </path>
-                   </svg>
-               </button>
                 <div class="burger_menu" id="burger_menu">
                   <span class="burger_menu_top"></span>
                   <span class="burger_menu_center"></span>
                   <span class="burger_menu_bottom"></span>
                 </div>
               </div>
+              <button id="light-dark">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+                   viewBox="0 0 24 24">
+                   <path d="M12 11.807A9.002 9.002 0 0 1 
+                       10.049 2a9.942 9.942 0 0 0-5.12 2.735c-3.905 3.905-3.905 
+                       10.237 0 14.142 3.906 3.906 10.237 3.905 14.143 0a9.946 
+                       9.946 0 0 0 2.735-5.119A9.003 9.003 0 0 1 12 11.807z">
+                   </path>
+                 </svg>
+             </button>
             </div>
           </nav>
         </div>
@@ -500,7 +500,12 @@
 
 
 
-
+  <div class="container">
+    <a href="" id="backtop">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" ;transform: ;msFilter:;><path d="M11 8.414V18h2V8.414l4.293 4.293 1.414-1.414L12 4.586l-6.707 6.707 1.414 1.414z"></path></svg>
+    </a>
+  </div>
+  
 
       <script src="./main.js"></script>
 </body>
