--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+  <div id="loading">
+    <div class="loading-spinner"></div>
+</div>
+
     <section class="text">
         <div class="container">
             <div class="text-all">
